--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+				  	<parallel>none</parallel>
+        			<forkCount>1</forkCount>
+        			<reuseForks>false</reuseForks>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
